# pytximport

./: .bandit.ini  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  INSTALL.md  Makefile  README.md  pyproject.toml  requirements.frozen.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.md  help.md
.github/workflows/: ci.yml  publish.yml
docs/: Makefile  install.sh
docs/source/: conf.py  example.ipynb  index.rst  installation.md  legal.md  license.md  privacy.md  releases.md  start.md
docs/source/_static/css/: custom.css
pytximport/: __init__.py  _cli.py  _version.py
pytximport/core/: __init__.py  _tximport.py
pytximport/definitions/: __init__.py
pytximport/importers/: __init__.py  _read_kallisto.py  _read_piscem.py  _read_rsem.py  _read_salmon.py  _read_tsv.py
pytximport/utils/: __init__.py  _biotype_filters.py  _convert_abundance_to_counts.py  _convert_counts_to_tpm.py  _convert_transcripts_to_genes.py  _create_transcript_gene_map.py  _create_transcript_to_gene_map.py  _filter_by_biotype.py  _get_median_length_over_isoform.py  _remove_transcript_version.py  _replace_missing_average_transcript_length.py  _replace_transcript_ids_with_names.py  _summarize_rsem_gene_data.py
test/: __init__.py  conftest.py  test_anndata_replicates.py  test_biocpy_replicates.py  test_biotype_filter.py  test_cli.py  test_comparison.ipynb  test_correctness.py  test_export.py  test_kallisto.py  test_piscem.py  test_rsem.py  test_salmon.py  test_summarizedexperiment_replicates.py  test_transcript_gene_map.py  test_transcript_level.py  test_transcriptome_to_gene_map.py
test/benchmark/: bench.R  bench.py  pytximport.sh  tximport.sh
test/data/: annotation.gtf  transcript_to_gene_map.csv  transcript_to_gene_map_gene_name.csv
test/data/fabry_disease/: counts_tximport_bootstrap_kallisto.csv  counts_tximport_bootstrap_salmon.csv  counts_tximport_lengthScaledTPM.csv  counts_tximport_no.csv  counts_tximport_scaledTPM.csv
test/data/fabry_disease/SRR16504309_wt/: cmd_info.json
test/data/fabry_disease/SRR16504309_wt/aux_info/: meta_info.json
test/data/fabry_disease/SRR16504310_wt/: cmd_info.json
test/data/fabry_disease/SRR16504310_wt/aux_info/: meta_info.json
test/data/fabry_disease/SRR16504311_ko/: cmd_info.json
test/data/fabry_disease/SRR16504311_ko/aux_info/: meta_info.json
test/data/fabry_disease/SRR16504312_ko/: cmd_info.json
test/data/fabry_disease/SRR16504312_ko/aux_info/: meta_info.json
test/data/kallisto/: abundance.h5  run_info.json
test/data/kallisto/multiple/: abundance_2.tsv
test/data/piscem/: res.quant  res_oarfish_naming.quant
test/data/rsem/: counts_tximport_no.csv
test/data/salmon/: counts_tximport_dtuScaledTPM.csv  counts_tximport_scaledTPM.csv  quant.sf
test/data/salmon/multiple/: Sample_1.sf  Sample_2.sf  Sample_3.sf
