[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pytximport"
description = "A python implementation of `tximport` to transform transcript into gene counts"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Malte Kuehl", email = "malte.kuehl@clin.au.dk" }]
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Natural Language :: English",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "anndata>=0.8.0",
    "click>=8.0.0,<9",
    "flox>=0.9.0,<0.10.0",
    "h5py>=3.0.0,<4",
    "numpy>=1.19.0,<3",
    "pandas>=2.2.0,<3",
    "pybiomart==0.2.0",
    "tqdm>=4.0.0,<5",
    "xarray>=2024.0.0",
]

[project.optional-dependencies]
pyarrow = ["pyarrow"]
biocpy = ["biocframe", "dolomite", "dolomite-se", "summarizedexperiment"]
dev = [
    "bandit",
    "biocframe",
    "black[jupyter]",
    "certifi",
    "coverage",
    "dolomite",
    "dolomite-se",
    "flake8",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flit",
    "furo",
    "ipykernel",
    "isort",
    "jupyter-client",
    "jupyter-core",
    "mypy",
    "myst-parser",
    "nbsphinx",
    "pandas-stubs",
    "pandoc",
    "pre-commit",
    "pyarrow",
    "pytest",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-rtd-theme",
    "summarizedexperiment",
    "types-tqdm",
]

[project.scripts]
pytximport = "pytximport:cli"

[project.urls]
Home = "https://github.com/complextissue/pytximport"
Source = "https://github.com/complextissue/pytximport"
Documentation = "https://pytximport.readthedocs.io/en/stable/"

[tool.flit.sdist]
exclude = ["docs/*", "test/*"]

[tool.isort]
profile = "black"
src_paths = ["pytximport", "test"]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
disallow_untyped_defs = true
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "WARN"
log_cli = "true"

markers = [
    "no_github_ci: marks tests that should not be run on GitHub CI (deselect with '-m \"not no_github_ci\"')",
]

[tool.coverage.run]
source = ["pytximport"]
omit = ["*/test/*"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == __main__:",
    "if TYPE_CHECKING:",
    "raise",
    "except",
    "warning",
    "def __repr__",
    "def __str__",
    "file_path = Path",
    "return None",
] # don't complain if non-runnable code isn't run:
ignore_errors = true

[tool.coverage.html]
directory = "docs/coverage_report"
